:bug: 모달 z-index 문제 해결

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -180,3 +180,9 @@ textarea,
 button {
   font-family: inherit;
 }
+
+#funnel-portal,
+#toast-portal {
+  position: relative;
+  z-index: 11;
+}
